# grpc-cli

./: .gitignore  Cargo.toml  LICENSE  README.md  output.desc
src/: cmd.rs  codec.rs  descriptor_set.rs  lib.rs  main.rs  static_server.rs  tls.rs  util.rs
src/cmd/: client.rs  compile.rs  inspect.rs  json.rs  server.rs  version.rs
