[package]
name = "grpc-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
argh = "0.1.13"
flate2 = "1.1.1"
futures-util = "0.3.31"
http = "1.3.1"
http-body = "1.0.1"
miette = { version = "7.6.0", features = ["fancy"] }
prost = "0.13.5"
prost-reflect = { version = "0.15.2", features = ["miette", "serde"] }
protox = "0.8.0"
regex-lite = { version = "0.1.6" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["rt"] }
tonic = "0.13.1"
tower-service = "0.3.3"
